--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,38 @@
     <link rel="icon" href="%PUBLIC_URL%/assets/Logo_ML.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Un buscardo de articulos simple para encontrar todo aquello que necesites,
+      introduce la busqueda encuentra tu articulo favorito y obtenlo en un muy corto tiempo."
+    />
+    <title>MercadoLibre Searcher - auto, juegos, consolas y mucho más!.</title>
+    <meta
+      name="keywords"
+      content="mercadolibre, buscardor mercadolibre, luis maracara, comprar productos, mercadolibre searcher"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/Logo_ML.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
   <body style="background-color: #EEEEEE">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0"
+    ></script>
+
+    <!-- Your like button code -->
+    <div
+      class="fb-like"
+      data-href="https://www.your-domain.com/your-page.html"
+      data-layout="standard"
+      data-action="like"
+      data-show-faces="true"
+    ></div>
   </body>
 </html>
